added svg button-menu

--- a/index.html
+++ b/index.html
@@ -33,17 +33,9 @@
         alt="Логотипи"
         class="logo-mobile-small"
       />
-
-      <img
-        src="./images/mobile/logo_mobile-2.png"
-        alt="Логотипи"
-        class="logo-mobile-big"
-      />
-      <img
-        src="./images/mobile/vector_mobile.svg"
-        alt="Вектор"
-        class="vector"
-      />
+      <svg class="=icon-burger" width="20" height="12">
+        <use class="icon-burger" href="/images/icons/icon-burger.svg"></use>
+      </svg>
 
       <div class="container">
         <nav class="main-nav">
@@ -76,7 +68,12 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </h3>
-          <button type="button" name="Бронюй" class="button" data-modal-open>
+          <button
+            type="button button-mobile"
+            name="Бронюй"
+            class="button"
+            data-modal-open
+          >
             Бронюй
           </button>
         </div>
@@ -86,6 +83,17 @@
         <button class="toggle-btn active" id="passengerBtn">Пасажир</button>
         <button class="toggle-btn" id="carrierBtn">Перевізник</button>
       </section>
+
+      <img
+        src="./images/mobile/logo_mobile-2.png"
+        alt="Логотипи"
+        class="logo-mobile-big"
+      />
+      <!-- <img
+        src="./images/mobile/vector_mobile.svg"
+        alt="Вектор"
+        class="vector"
+      /> -->
 
       <section class="dropdown-container" id="booking">
         <div class="dropdown">
