--- a/index.html
+++ b/index.html
@@ -178,11 +178,12 @@
             <div class="features-content">
               <img
                 class="features-pic"
-                width="70"
-                height="70"
+                width="100"
+                height="100"
                 src="./images/laptop/location_laptop.svg"
                 alt="Доступ до місцезнаходження водія"
               />
+
               <h3 class="features-title">Доступ до місцязнаходження водія</h3>
               <p class="features-text">
                 Слідкуй за актуальною локацією водія та завжди будь в курсі де
@@ -195,9 +196,16 @@
             <div class="features-content">
               <img
                 class="features-pic"
-                width="70"
-                height="70"
+                width="100"
+                height="100"
                 src="./images/laptop/mobile_laptop.svg"
+                alt="Онлайн бронювання у додатку"
+              />
+              <img
+                class="features-pic-mobile"
+                width="44"
+                height="44"
+                src="./images/mobile/mobile_mobile.svg"
                 alt="Онлайн бронювання у додатку"
               />
               <div class="features-text-content">
@@ -213,9 +221,16 @@
             <div class="features-content">
               <img
                 class="features-pic"
-                width="70"
-                height="70"
+                width="100"
+                height="100"
                 src="./images/laptop/info_laptop.svg"
+                alt="Статус поїздки"
+              />
+              <img
+                class="features-pic-mobile"
+                width="44"
+                height="44"
+                src="./images/mobile/info_mobile.svg"
                 alt="Статус поїздки"
               />
               <div class="features-text-content">
@@ -231,9 +246,16 @@
             <div class="features-content">
               <img
                 class="features-pic"
-                width="70"
-                height="70"
+                width="100"
+                height="100"
                 src="./images/laptop/car_laptop.svg"
+                alt="Відстеження поїздок"
+              />
+              <img
+                class="features-pic-mobile"
+                width="44"
+                height="44"
+                src="./images/mobile/car_mobile.svg"
                 alt="Відстеження поїздок"
               />
               <div class="features-text-content">
