added styles for button submit

--- a/index.html
+++ b/index.html
@@ -146,19 +146,22 @@
       </section>
 
       <section class="YDC">
-        <img
-          class="img-YDC"
-          src="./images/mobile/about_us_mobile.png"
-          alt="Bus"
-        />
-        <h2 class="title-YDC">
-          <span class="span-YDC">YDC</span> - будь в курсі!
-        </h2>
-        <h3 class="main-YDC">Доступ до місцязнаходження водія</h3>
-        <p class="text-YDC">
-          Слідкуй за актуальною локацією водія та завжди будь в курсі де зараз
-          Твій бус або відправлена Тобою посилка. Ми не Uber, але теж круто!
-        </p>
+        <div class="container">
+          <img
+            class="img-YDC"
+            src="./images/mobile/about_us_mobile.png"
+            alt="Bus"
+          />
+          <h2 class="title-YDC">
+            <span class="span-YDC">YDC</span> - будь в курсі!
+          </h2>
+          <h3 class="main-YDC">Доступ до місцязнаходження водія</h3>
+          <p class="text-YDC">
+            Слідкуй за актуальною локацією водія та завжди будь в курсі де зараз
+            Твій бус або відправлена Тобою посилка. Ми не Uber, але теж круто!
+          </p>
+        </div>
+
         <button class="submit">Дізнатись більше</button>
       </section>
 
