changed logo and vector

--- a/index.html
+++ b/index.html
@@ -74,19 +74,21 @@
         >
           Бронюй
         </button>
+
+        <div class="logo-container">
+          <img
+            src="./images/mobile/logo_mobile-2.png"
+            alt="Логотипи"
+            class="logo-mobile-big"
+          />
+
+          <img
+            src="./images/mobile/vector_mobile.svg"
+            alt="Вектор"
+            class="vector"
+          />
+        </div>
       </section>
-
-      <img
-        src="./images/mobile/logo_mobile-2.png"
-        alt="Логотипи"
-        class="logo-mobile-big"
-      />
-
-      <!-- <svg
-        src="./images/mobile/vector_mobile.svg"
-        alt="Вектор"
-        class="vector"
-      /> -->
 
       <section class="toggle-container">
         <button class="toggle-btn active" id="passengerBtn">Пасажир</button>
