--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
         alt="Логотипи"
         class="logo-mobile-small"
       />
-      <svg class="=icon-burger" width="20" height="12">
-        <use class="icon-burger" href="/images/icons/icon-burger.svg"></use>
-      </svg>
+      <img
+        src="./images/icons/icon-burger.svg"
+        alt="Меню"
+        class="icon-burger"
+      />
 
       <nav class="main-nav">
         <div class="menu-container" id="menu-container" data-menu>
